Minor alignment fix

--- a/gitb-ui/app/assets/stylesheets/less/app.less
+++ b/gitb-ui/app/assets/stylesheets/less/app.less
@@ -240,5 +240,8 @@ tr.expandable-table-row-expanded table.expandable-table {
     min-height: 34px;
     padding-top: 5px;
     padding-bottom: 7px;
-    margin-bottom: 0;	
+	margin-bottom: 0;	
+	span {
+		vertical-align: text-bottom;
+	}
 }
